RESOLVED FIXED315626
Crash under WKWebView _dispatchSetViewLayoutSize: when client overrides -setFrame:
https://bugs.webkit.org/show_bug.cgi?id=315626
Summary Crash under WKWebView _dispatchSetViewLayoutSize: when client overrides -setF...
Tim Horton
Reported 2026-05-26 18:40:32 PDT
Crash under WKWebView _dispatchSetViewLayoutSize: when client overrides -setFrame:
Attachments
Tim Horton
Comment 1 2026-05-26 18:40:33 PDT
Tim Horton
Comment 2 2026-05-26 19:09:09 PDT
EWS
Comment 3 2026-05-26 23:16:27 PDT
Committed 313948@main (8ea991203620): <https://commits.webkit.org/313948@main> Reviewed commits have been landed. Closing PR #65741 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.