Crash under WKWebView _dispatchSetViewLayoutSize: when client overrides -setFrame: https://bugs.webkit.org/show_bug.cgi?id=315626 rdar://177788035

Reviewed by Abrar Rahman Protyasha and Pascoe.

A client who overrides - [WKWebView setFrame:] can enter various frame
adjustment codepaths during WKWebView initialization, before WebPageProxy
has been created, resulting in a crash. Add a null check to avoid this.

Test: WKWebView.SubclassedSetFrameDuringInitDoesNotCrash

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _dispatchSetViewLayoutSize:]):
(-[WKWebView _frameOrBoundsWillChange]):
(-[WKWebView _frameOrBoundsMayHaveChanged]):
Bail if _page is not initialized yet.

* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/WKWebViewSubclassedSetFrame.mm:
Add a test.

Canonical link: https://commits.webkit.org/313948@main